Leaner ActionQueue